src/test/data/tests/chapter_17/invalid_types/void/void_compare.c
void f(void){
    return;
}

int main(void) {
  // you can't compare void expressions
  if (f() < f())
    return 1;
  return 0;
}
